--- a/public/ingressmap.html
+++ b/public/ingressmap.html
@@ -33,12 +33,12 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <title>Ingress Damage Reports Map</title>
-<link rel="stylesheet" type="text/css" href="ingressmap.css" />
+<link rel="stylesheet" type="text/css" href="stylesheets/ingressmap.css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <script type="text/javascript" src="https://apis.google.com/js/client.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiHaZgLgcz5Vv3VfhD0CRxT_Mdplec5zI&sensor=true"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="ingressmap.js"></script>
+<script type="text/javascript" src="javascripts/ingressmap.js"></script>
 </head>
 <body>
 <div id="panel"><div id="content">Ingress Damage Reports Map</div></div>
