--- a/public/ingressmap.html
+++ b/public/ingressmap.html
@@ -36,6 +36,7 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 <link rel="stylesheet" type="text/css" href="stylesheets/ingressmap.css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <script type="text/javascript" src="https://apis.google.com/js/client.js"></script>
+<script type="text/javascript"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiHaZgLgcz5Vv3VfhD0CRxT_Mdplec5zI&sensor=true"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="javascripts/ingressmap.js"></script>
